# sa3.cpp-iplug2-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SA3IPlug2Demo/: CMakeLists.txt  DemoAudioFileStore.cpp  DemoAudioFileStore.h  DemoUIPrimitives.h  SA3IPlug2Demo.cpp  SA3IPlug2Demo.h  config.h
SA3IPlug2Demo/resources/: SA3IPlug2Demo-VST3-Info.plist  SA3IPlug2Demo-macOS-Info.plist  SA3IPlug2Demo-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg  resource.h
